@@ -1,3 +1,6 @@
+2004-07-22	blytkerchan
+	* module.mk: update
+
 2004-07-20	blytkerchan
 	* module.ml: new file
 	* configure.ac: remove
